k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
	name: frontend-service
spec:
	selector:
	  app: frontend # <-- ต้องตรงกับ labels ของ Pod ใน Deployment
	ports:
	  - protocol: TCP
		port: 80 # Port ที่ Service จะเปิด
		targetPort: 80 # Port ของ Container ที่จะส่ง traffic ไปให้
